--- a/css/selectors.css
+++ b/css/selectors.css
@@ -30,7 +30,7 @@ h1 {
 .box1  ul {
     font-family: 'Rouge Script';
 }
-.box1 ul :not(:last-child){
+.box1 ul li:not(:last-child){
   color: darkred;
   margin: 5px 0;
   font-family: "Playwrite IT Moderna";
