--- a/css/position.css
+++ b/css/position.css
@@ -11,6 +11,25 @@ h2{
     text-align: center;
     margin: 20px 0;
 }
+.sticky{
+    width: 100%;
+    height: 50px;
+    background-color: rgb(50, 50, 1);
+    position: sticky;
+    top: 0;
+    color: white;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+}
+.fixed{
+    height: 50px;
+    width: 50px;
+    position: fixed;
+    right: 0;
+    background-color: seagreen;
+    border-radius: 50%;
+}
 .static-box{
     width: 300px;
     height: 300px;
@@ -43,9 +62,10 @@ h2{
     height: 700px;
     background-color: rgb(238, 238, 203);
     margin: 20px auto;
-    /* overflow: hidden; */
+    overflow: hidden; 
     border: 2px solid black;
     perspective: 1000px;
+    border-radius: 10%;
     
 }
 .single-door{
@@ -59,11 +79,19 @@ h2{
 .left{
     left: 0;
     transform-origin: left center;
+    background-image: url(../images/door.jpg);
+    background-size: cover;
+    border: 5px solid darkred;
+    border-radius: 5%;
 }
 .right{
     right: 0;
     background-color: saddlebrown;
     transform-origin: right center;
+    background-image: url(../images/door.jpg);
+    background-size: cover;
+    border: 5px solid darkred;
+    border-radius: 10%;
 }
 .door:hover .single-door.left{
     transform: rotatey(90deg);
