--- a/css/position2.css
+++ b/css/position2.css
@@ -1,39 +1,78 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-h1{
-    text-align: center;
-    margin: 20px 0;
-    color: rgb(56, 180, 132);
+h1 {
+  text-align: center;
+  margin: 20px 0;
+  color: rgb(56, 180, 132);
 }
-p{
-    font-size: 30px;
+p {
+  font-size: 30px;
 }
-.sticky{
-    position:sticky;
-    top: 0;
-    background-color: rgb(9, 10, 10);
-    color: white;
-    padding: 10px;
-    font-size: 20px;
+.sticky {
+  position: sticky;
+  top: 0;
+  background-color: rgb(9, 10, 10);
+  color: white;
+  padding: 10px;
+  font-size: 20px;
 }
-.fixed{
-    width: 100px;
+.fixed {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgb(208, 4, 52);
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 100px;
+  z-index: 1;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+.door {
+  width: 400px;
+  height: 700px;
+  background-color: gray;
+  position: relative;
+  margin: 20px auto;
+  border: 20px solid black;
+  overflow: hidden;
+}
+.shutter {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgb(161, 150, 150);
+  position: absolute;
+  transition: all 2s;
+  /* transform: translateY(100%); */
+  transform-origin: top;
+  background-image: url(../images/shutter.jpg);
+  background-size: cover;
+  z-index: 1;
+}
+.door:hover .shutter {
+  transform: translatey(-100%);
+}
+.hello{
+    width: 100%;
     height: 100px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: rgb(208, 4, 52);
-    color: white;
-    padding: 10px;
-    font-size: 20px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 100px;
-}
-a{
-    color: white;
-    text-decoration: none;
+    position: absolute;
+    color:brown;
+    /* z-index: -1;  */
+    margin:300px auto;
+    font-size: 70px;
+    font-family: 'Tangerine';
+    background-color: grey;
+   
 }
