--- a/css/position.css
+++ b/css/position.css
@@ -74,7 +74,7 @@ h2{
     background-color: brown;
     position: absolute;
     transition: transform 2s;
-    perspective: 1000px;
+    perspective: 1000px; 
 }
 .left{
     left: 0;
@@ -121,7 +121,7 @@ h2{
     transform-origin: center center;
     margin-bottom: 0;
     perspective: 1000px;
-    transition: transform 2s, z-index 2s;
+    transition: transform 2s, z-index 2s ease-in-out;
 }
 
 .door:hover .welcome {
