--- a/css/after-before.css
+++ b/css/after-before.css
@@ -11,6 +11,7 @@ h1{
 }
 .container{
     margin-left: 30px;
+    text-align: center; /* Add this line */
 }
 .container h2{
     position: relative;
@@ -27,8 +28,8 @@ h1{
     position: absolute;
     content: "-Albert Einstein";
     display: inline-block;
-    top: 50px;
-    left: 80px;
+    top: 55px;
+    left: 90px;
     transform: translate(-50%, -50%);
     font-size: 20px;
 }
@@ -45,5 +46,99 @@ h1{
     margin-right: 80px;
     transform: translate(-110%, -50%);
     border-radius: 50%;
-    top: 30px;
+    top: 35px;
+}
+
+.about{
+    text-align: center;
+    position: relative;
+}
+.about h2{
+    margin-top: 30px;
+    font-size: 40px;
+    color: #a3076f;
+    text-decoration: underline;
+    text-decoration-color: rebeccapurple;
+    text-decoration-style: dotted;
+}
+.about i{
+    position: absolute;
+    top: 55px;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 25px;
+    color: #e81212;
+    z-index: 2;
+    animation: heart 1s ease infinite;
+}
+.about i::after {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 5px;
+    background-color: #100f0f;
+    top: 12px;
+    z-index: -2;
+    left: 30px;
+}
+/* .about i::before{
+    content: "";
+    position: absolute; 
+    width: 50px;
+    height: 5px;
+    background-color: #100f0f;
+    top: 12px;
+    
+    left: 30px;
+} */
+@keyframes heart{
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+.style{
+    text-align: center;
+    margin: 70px auto;
+}
+.style h2{
+    font-size: 40px;
+    color: #038820;
+    position: relative;
+}
+.style .red-line{
+    position: absolute;
+    display: inline-block;
+    height: 8px;
+    width: 50px;
+    background-color: #e81212;
+    margin: 10px auto;
+    left: 48%;
+}
+.style .red-line::before{
+    content: "";
+    position: absolute;
+    /* display: inline-block; */
+    transform: translatex(-50%);
+    top: 3px;
+    left: -35px;
+    height: 3px;
+    width: 70px;
+    background-color:#f44e4e;;
+}
+.style .red-line::after{
+    content: "";
+    position: absolute;
+    /* display: inline-block; */
+    transform: translatex(50%);
+    top: 3px;
+    right: -35.5px;
+    height: 3px;
+    width: 70px;
+    background-color: #f44e4e;
 }
