--- a/css/after-before.css
+++ b/css/after-before.css
@@ -60,7 +60,7 @@ h1 {
   text-decoration-color: rebeccapurple;
   text-decoration-style: dotted;
 }
-.about i {
+.about i{
   position: absolute;
   top: 55px;
   left: 50%;
@@ -168,9 +168,9 @@ h1 {
 .imgbox h3{
     position: absolute;
     text-align: center;
-    top: 33%;
-    left: 27%;
-    transition: translate(-30%, -30%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: 70px;
     color: aliceblue;
     font-family: 'WindSong';
