--- a/css/after-before.css
+++ b/css/after-before.css
@@ -11,9 +11,10 @@ h1 {
 }
 .container {
   margin-left: 0px;
+  position: relative;
 }
 .container h2 {
-  position: relative;
+  
   text-align: center;
   margin: 10px;
   font-size: 1.5rem;
@@ -28,8 +29,8 @@ h1 {
   content: "-Albert Einstein";
   display: inline-block;
   top: 55px;
-  left: 90px;
-  transform: translate(-50%, -50%);
+  left: 35%;
+  transform: translateX(-50%);
   font-size: 20px;
 }
 .container h2::before {
@@ -45,7 +46,7 @@ h1 {
   margin-right: 80px;
   transform: translate(-110%, -50%);
   border-radius: 50%;
-  top: 35px;
+  top: 45px;
 }
 
 .about {
@@ -80,7 +81,7 @@ h1 {
   z-index: -2;
   left: 30px;
 }
-/* .about i::before{
+/* .about i::before {
     content: "";
     position: absolute; 
     width: 50px;
@@ -89,7 +90,7 @@ h1 {
     top: 12px;
     
     left: 30px;
-} */
+}  */
 @keyframes heart {
   0% {
     transform: scale(1);
@@ -145,27 +146,95 @@ h1 {
   height: 300px;
   background-image: url(../images/deer.jpg);
   background-size: cover;
-  border:  10px ;
+  border: 10px solid #fff;
+  border-radius: 10%;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.5s ease;
 }
 
+.imgbox:hover {
+  transform: scale(1.1);
+}
+
+.imgbox h3 {
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 50px;
+  color: aliceblue;
+  font-family: 'WindSong';
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  
+}
 .border{
-    position: absolute;
-    width: 280px;
-    height: 280px;
-    border: solid 2px #fcf7f7;
-    display: inline-block;
-    top: 10px;
-    left: 10px;
-    right: 5px;
-    bottom: 5px;
-    transition: all 1s ease;
-    /* transform: translate(-50%, -50%); */
-    z-index: -1;
+  width: 240px;
+  height: 240px;
+  border: solid 2px white;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10%;
+  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 .imgbox:hover .border{
+  opacity: 1;
+}
+
+.imgbox:hover h3 {
+  opacity: 1;
+}
+
+.imgbox::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.imgbox:hover::before {
+  opacity: 1;
+}
+.imgbox1 {
+  margin: 50px auto;
+  position: relative;
+  width: 800px;
+  height: 800px;
+  background-image: url(../images/waterfall.jpg);
+  background-size: cover;
+  border:  10px ;
+  border-radius: 10%;
+  cursor: pointer;
+}
+
+.border1{
+    position: absolute;
+    width: 680px;
+    height: 680px;
+    border: solid 2px #fcf7f7;
+    border-radius: 10%;
+    display: inline-block;
+    left: 50%;
+    top: 50%;
+    transition: all 1s ease;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+.imgbox1:hover .border1{
     z-index: 1;
 }
-.imgbox h3{
+.imgbox1 h3{
     position: absolute;
     text-align: center;
     top: 50%;
@@ -177,10 +246,10 @@ h1 {
     opacity: 0; 
     transition: all 1s ease;
 }
-.imgbox:hover h3{
+.imgbox1:hover h3{
     opacity: 1;
 }   
-.imgbox::before {
+.imgbox1::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -189,7 +258,8 @@ h1 {
   transform: scale(1);
   transition: all 1s ease;
   opacity: 0;
+  border-radius: 10%;
 }
-.imgbox:hover::before {
+.imgbox1:hover::before {
   opacity: 1;
 }
