--- a/css/after-before.css
+++ b/css/after-before.css
@@ -61,37 +61,36 @@ h1 {
   text-decoration-color: rebeccapurple;
   text-decoration-style: dotted;
 }
-.about span{
-  display: inline-block;
-  position: relative;
-  padding: 0px 10px;
-}
-.about span i{
-  display: inline-block;
-  animation: heart 1s ease infinite;
+.about i{
+  position: absolute;
+  top: 55px;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 25px;
   color: #e81212;
+  z-index: 2;
+  animation: heart 1s ease infinite;
 }
-.about span::before{
+.about i::after {
+  content: "";
   position: absolute;
-  content: '';
-  width: 55px;
-  height: 3px;
-  background-color: #000000;
-  right: 100%;
-  top: 50%;
-  transform: translateY(-50%);
+  width: 50px;
+  height: 5px;
+  background-color: #100f0f;
+  top: 12px;
+  z-index: -2;
+  left: 30px;
 }
-.about span::after{
-  position: absolute;
-  content: '';
-  width: 55px;
-  height: 3px;
-  background-color: #000000;
-  left: 100%;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
+/* .about i::before {
+    content: "";
+    position: absolute; 
+    width: 50px;
+    height: 5px;
+    background-color: #100f0f;
+    top: 12px;
+    
+    left: 30px;
+}  */
 @keyframes heart {
   0% {
     transform: scale(1);
@@ -155,7 +154,7 @@ h1 {
 }
 
 .imgbox:hover {
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 
 .imgbox h3 {
@@ -165,16 +164,16 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 50px;
-  color: aliceblue;
+  color: rgba(240, 248, 255, 0.8);
   font-family: 'WindSong';
   opacity: 0;
   transition: opacity 0.5s ease;
-  
 }
-.border{
-  width: 240px;
-  height: 240px;
-  border: solid 2px white;
+
+.border {
+  width: 50px;
+  height: 50px;
+  border: solid 1px rgba(255, 255, 255, 0.8);
   display: inline-block;
   position: absolute;
   top: 50%;
@@ -182,10 +181,12 @@ h1 {
   transform: translate(-50%, -50%);
   border-radius: 10%;
   opacity: 0;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
-.imgbox:hover .border{
+
+.imgbox:hover .border {
   opacity: 1;
+  transform: translate(-50%, -50%) scale(5); /* Move outward */
 }
 
 .imgbox:hover h3 {
