--- a/css/after-before.css
+++ b/css/after-before.css
@@ -62,35 +62,31 @@ h1 {
   text-decoration-style: dotted;
 }
 .about i{
-  position: absolute;
-  top: 55px;
-  left: 50%;
-  transform: translate(-50%);
-  font-size: 25px;
-  color: #e81212;
-  z-index: 2;
+  display: inline-block;
   animation: heart 1s ease infinite;
+  font-size: 30px;
+  color: #e81212;
 }
-.about i::after {
+.about span::after {
   content: "";
   position: absolute;
-  width: 50px;
+  width: 60px;
   height: 5px;
   background-color: #100f0f;
-  top: 12px;
-  z-index: -2;
-  left: 30px;
+  left: 49.5%;
+  transform: translateX(50%);
+  top: 60px;
 }
-/* .about i::before {
-    content: "";
-    position: absolute; 
-    width: 50px;
-    height: 5px;
-    background-color: #100f0f;
-    top: 12px;
-    
-    left: 30px;
-}  */
+.about span::before {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 5px;
+  background-color: #100f0f;
+  right: 49.5%;
+  transform: translateX(-50%);
+  top: 60px;
+}
 @keyframes heart {
   0% {
     transform: scale(1);
@@ -167,7 +163,7 @@ h1 {
   color: rgba(240, 248, 255, 0.8);
   font-family: 'WindSong';
   opacity: 0;
-  transition: opacity 0.5s ease;
+  transition: opacity 1s ease;
 }
 
 .border {
@@ -181,7 +177,7 @@ h1 {
   transform: translate(-50%, -50%);
   border-radius: 10%;
   opacity: 0;
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition: opacity 1s ease, transform 1s ease;
 }
 
 .imgbox:hover .border {
@@ -264,4 +260,17 @@ h1 {
 }
 .imgbox1:hover::before {
   opacity: 1;
+}
+.food{
+  width: 500px;
+  height: 500px;
+  background-image: url(../images/food.jpg);
+  background-size: cover;
+  margin: 20px auto;
+  position: relative;
+}
+.food-box{
+  width: 100%;
+  height: 100%;
+
 }
