--- a/css/position.css
+++ b/css/position.css
@@ -113,3 +113,51 @@ h2{
     top: 50%;
     transform: translateY(-50%);
 }
+.button{
+  position: relative;
+  margin: 30px auto;
+  width: 150px;
+  height: 50px;
+  background-color: aquamarine;
+  text-align: center;
+  padding: 5px;
+  line-height: 40px;
+  border-radius: 10%;
+  transition: all 0.5s ease;
+}
+.button a{
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.5s ease; /* Add transition for color */
+}
+.button::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(250, 249, 249);
+  top: 0;
+  left: 0;
+  border-radius: 10%;
+  border: solid 1px aquamarine;
+  box-sizing: border-box;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+.button a::after{ /* Corrected selector */
+  content: "";
+  color: aquamarine;
+  opacity: 0;
+}
+.button:hover{
+  transform: scale(1.2);
+}
+.button:hover::after{
+  opacity: 1;
+}
+.button:hover a{ /* Change color on hover */
+  color: aquamarine;
+}
+.button:hover a::after{ /* Corrected selector */
+  opacity: 1;
+}
