--- a/css/after-before.css
+++ b/css/after-before.css
@@ -390,6 +390,56 @@ h1 {
 .button:hover .effect-3 a {
   color: aquamarine;
 }
+.button2 {
+  position: relative;
+  margin: 30px auto;
+  width: 150px;
+  height: 50px;
+  background-color: white;
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
+  color: aquamarine;
+  border: none;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+  overflow: hidden;
+}
+
+.button2::before,
+.button2::after {
+  content: "";
+  position: absolute;
+  width: 20px;  /* Short width initially */
+  height: 20px; /* Short height initially */
+  background: none;
+  border: 2px solid aquamarine;
+  transition: all 0.4s ease-in-out;
+}
+
+/* Top-left border */
+.button2::before {
+  top: 0;
+  left: 0;
+  border-right: none;
+  border-bottom: none;
+}
+
+/* Bottom-right border */
+.button2::after {
+  bottom: 0;
+  right: 0;
+  border-left: none;
+  border-top: none;
+}
+
+/* Hover effect to expand the borders */
+.button2:hover::before,
+.button2:hover::after {
+  width: 100%;
+  height: 100%;
+}
+
 
 
 
