--- a/css/after-before.css
+++ b/css/after-before.css
@@ -393,11 +393,11 @@ h1 {
 .button2 {
   position: relative;
   margin: 30px auto;
-  width: 150px;
-  height: 50px;
+  width: 200px;
+  height: 70px;
   background-color: white;
   text-align: center;
-  line-height: 50px;
+  line-height: 70px;
   font-size: 20px;
   color: aquamarine;
   border: none;
@@ -405,7 +405,12 @@ h1 {
   transition: all 0.4s ease-in-out;
   overflow: hidden;
 }
-
+.button2 a{
+  text-decoration: none;
+  color: aquamarine;
+  font-size: 30px;
+  font-weight: 700;
+}
 .button2::before,
 .button2::after {
   content: "";
