--- a/css/flex.css
+++ b/css/flex.css
@@ -10,3 +10,59 @@ h1{
     font-family: 'Rouge Script';
     margin: 20px;
 }
+h2{
+    text-align: center;
+    font-size: 30px;
+    color: rgb(87, 243, 87);
+    font-family: 'Playwrite IT Moderna';
+    margin: 20px;
+}
+.container{
+    width: 1320px;
+    height: 700px;
+    background-color: bisque;
+    margin: 20px auto;
+    padding: 5px;
+    display: flex;
+}
+.box1{
+    width: 150px;
+    height: 150px;
+    background-color: cornflowerblue;
+    margin: 10px;
+    text-align: center;
+    line-height: 150px;
+    font-size: 50px;
+    color: aliceblue;
+    font-family: 'Lilita One';
+
+}
+.box2{
+    width: 250px;
+    height: 150px;
+    background-color: rgb(242, 56, 56);
+    margin: 10px;
+    text-align: center;
+    line-height: 150px;
+    font-size: 50px;
+    color: aliceblue;
+    font-family: 'Lilita One';
+}
+.flex-wrap{
+    flex-wrap: wrap;
+}
+.flex-wrap-rev{
+    flex-wrap: wrap-reverse;
+}
+.flex-dir-row{
+    flex-direction: row;
+}
+.flex-dir-col{
+    flex-direction: column;
+}
+.flex-dir-row-rev{
+    flex-direction: row-reverse;
+}
+.flex-dir-col-rev{
+    flex-direction: column-reverse;
+}
