--- a/css/after-before.css
+++ b/css/after-before.css
@@ -435,6 +435,63 @@ h1 {
   width: 100%;
   height: 100%;
 }
+.imgbox3{
+  margin: 50px auto;
+  position: relative;
+  width: 600px;
+  height: 600px;
+  background-image: url(../images/field.jpg);
+  background-size: cover;
+  border:  10px;
+  cursor: pointer;
+}
+.imgbox3 .title{
+  position: relative;
+  display: flex;
+  height: 250px;
+  width: 90%;
+  top: 5%;
+  left: 5%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  align-items: center;
+  color: #fff;
+  border: solid 3px white;
+  border-radius: 10px;
+  padding: 20px;
+  gap: 5px;
+  transition: all 0.5s ease;
+}
+.imgbox3:hover .title{
+  top: 60%;
+  bottom: 5%;
+  height: 150px;
+}
+.imgbox3 .title span{
+  font-size: 25px;
+  font-weight: 100px;
+}
+.imgbox3 .title h2{
+  font-size: 33px;
+  font-weight: 500px;
+}
+.imgbox3 p{
+  position: absolute;
+  width: 90%;
+  height: 150px;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  bottom: 5%;
+  left: 5%;
+  font-size: 25px;
+  color: #fff;
+  font-family: 'Bebas Neue';
+  letter-spacing: 2px;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+.imgbox3:hover p{
+  opacity: 1;
+}
+
 
 
 
