--- a/css/after-before.css
+++ b/css/after-before.css
@@ -452,25 +452,53 @@ h1 {
   width: 90%;
   top: 5%;
   left: 5%;
+  
   /* background-color: rgba(0, 0, 0, 0.5); */
   align-items: center;
   color: #fff;
-  border: solid 3px white;
+  /* border: solid 3px white;
   border-radius: 10px;
-  padding: 20px;
+  
   gap: 5px;
+  transition: all 0.5s ease; */
+}
+.imgbox3::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(210, 105, 30, 0.4);
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+.imgbox3:hover::before{
+  opacity: 1;
+}
+.effect{
+  position: absolute;
+  height: 250px;
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  border: solid 2px white;
+  border-radius: 10px;
   transition: all 0.5s ease;
 }
-.imgbox3:hover .title{
-  top: 60%;
+.imgbox3:hover .title .effect{
+  top: 140%;
   bottom: 5%;
   height: 150px;
 }
 .imgbox3 .title span{
+  margin-left: 20px;
+  display: inline-block;
   font-size: 25px;
   font-weight: 100px;
 }
 .imgbox3 .title h2{
+  
+  display: inline-block;
   font-size: 33px;
   font-weight: 500px;
 }
@@ -487,6 +515,8 @@ h1 {
   letter-spacing: 2px;
   opacity: 0;
   transition: opacity 1s ease;
+  margin-left: 15px;
+  margin-right: 20px;
 }
 .imgbox3:hover p{
   opacity: 1;
