--- a/css/flex.css
+++ b/css/flex.css
@@ -25,6 +25,14 @@ h2{
     padding: 5px;
     display: flex;
 }
+.container1{
+    width: 1320px;
+    
+    background-color: bisque;
+    margin: 20px auto;
+    padding: 5px;
+    display: flex;
+}
 .box1{
     width: 150px;
     height: 150px;
@@ -41,6 +49,17 @@ h2{
     width: 250px;
     height: 150px;
     background-color: rgb(242, 56, 56);
+    margin: 10px;
+    text-align: center;
+    line-height: 150px;
+    font-size: 50px;
+    color: aliceblue;
+    font-family: 'Lilita One';
+}
+.box3{
+    width: 250px;
+    
+    background-color: rgb(56, 242, 90);
     margin: 10px;
     text-align: center;
     line-height: 150px;
@@ -65,4 +84,49 @@ h2{
 }
 .flex-dir-col-rev{
     flex-direction: column-reverse;
+}
+.justify-content-start{
+    justify-content: flex-start;
+}
+.justify-content-center{
+    justify-content: center;
+}
+.justify-content-end{
+    justify-content: flex-end;
+}
+.justify-content-between{
+    justify-content: space-between;
+}
+.justify-content-around{
+    justify-content: space-around;
+}
+.justify-content-evenly{
+    justify-content: space-evenly;
+}
+.align-items-start{
+    align-items: flex-start;
+}
+.align-items-center{
+    align-items: center;
+}
+.align-items-end{
+    align-items: flex-end;
+}
+.align-items-baseline{
+    align-items: baseline;
+}
+.align-items-stretch{
+    align-items:stretch;
+}
+.align-content-start{
+    align-content: flex-start;
+}
+.align-content-center{
+    align-content:center;
+}
+.align-content-end{
+    align-content:flex-end;
+}
+.align-content-between{
+    align-content:space-between;
 }
