--- a/css/after-before.css
+++ b/css/after-before.css
@@ -521,7 +521,7 @@ h1 {
 .imgbox3:hover p{
   opacity: 1;
 }
-.imgbox4{
+.imgbox4 {
   margin: 50px auto;
   position: relative;
   width: 600px;
@@ -529,8 +529,16 @@ h1 {
   background-image: url(../images/sunflower.jpg);
   background-size: cover;
   cursor: pointer;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
 }
-.imgbox4::before{
+
+/* Zoom effect on hover */
+.imgbox4:hover {
+  transform: scale(1.05);
+}
+
+.imgbox4::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -539,55 +547,64 @@ h1 {
   left: 0;
   background-color: rgba(2, 238, 30, 0.3);
   opacity: 0;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.5s ease-in-out;
 }
-.imgbox4:hover::before{
+
+.imgbox4:hover::before {
   opacity: 1;
 }
-.imgbox4 .flower{
+
+/* Flower container */
+.imgbox4 .flower {
   position: absolute;
   width: 90%;
   height: 90%;
-  /* background-color: rgba(232, 18, 18, 0.3); */
   top: 5%;
   left: 5%;
-  
+  text-align: center;
 }
-.imgbox4 .flower h2{
+
+.imgbox4 .flower h2 {
   font-size: 50px;
   color: #fff;
+  position: relative;
 }
-.imgbox4 .flower::before{
+
+/* Underline Animation */
+.imgbox4 .flower::before {
   content: "";
   position: absolute;
   width: 0%;
   height: 3px;
   background-color: #fff;
   top: 12%;
-  left: 0%;
-  transition: all 0.5s ease;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: width 0.5s ease-in-out;
 }
-.imgbox4:hover .flower::before{
+
+.imgbox4:hover .flower::before {
   width: 100%;
 }
-.imgbox4 .flower::after{
+
+/* Sliding and fading text effect */
+.imgbox4 .flower::after {
   content: "Keep your face to the sunshine and you cannot see the shadows.";
   position: absolute;
   width: 100%;
-  height: 100px;
-  /* background-color: darkblue; */
-  top: 16%;
+  height: auto;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 100%);
   font-size: 30px;
   color: white;
-  transform-origin: right;
-  transition: all 0.3s ease;
-  transform: translateX(106%);
-  overflow: hidden;
-  /* opacity: 0; */
+  opacity: 0;
+  transition: transform 0.5s ease, opacity 0.5s ease;
 }
-.imgbox4:hover .flower::after{
-  transform: translateX(0%);
-  width: 100%;
+
+.imgbox4:hover .flower::after {
+  transform: translate(-50%, 0);
   opacity: 1;
 }
 
