--- a/css/image-hover.css
+++ b/css/image-hover.css
@@ -233,16 +233,16 @@ h1{
     left: 50%;
   }
   .food:hover .food-box a:first-child{
-    top: 30%;
+    top: 20%;
   }
   .food:hover .food-box a:nth-child(2){
-    left: 30%;
+    left: 20%;
   }
   .food:hover .food-box a:nth-child(3){
-    right: 25%;
+    right: 15%;
   }
   .food:hover .food-box a:last-child{
-    bottom: 20%;
+    bottom: 10%;
   }
   .imgbox3{
     margin: 50px auto;
@@ -397,4 +397,81 @@ h1{
   .imgbox4:hover .flower::after{
     transform: translateX(0%);
     opacity: 1;
+  }
+  .imgbox5{
+    margin: 50px auto;
+    position: relative;
+    width: 600px;
+    height: 600px;
+    background: radial-gradient(circle, rgba(219,238,174,1) 0%, rgba(205,148,233,1) 100%);
+    background-size: cover;
+    cursor: pointer;
+  }
+  /* .imgbox5::after{
+    content: "";
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease; 
+  }
+  .imgbox5:hover::after{
+    opacity: 1;
+  } */
+  .imgbox5 h2{
+    text-align: center;
+    line-height: 600px;
+    font-size: 90px;
+    color: rgb(239, 59, 206);
+    font-family: 'Rouge Script';
+  }
+  .line1{
+    position: absolute;
+    width: 0%;
+    height: 3px;
+    background-color: crimson;
+    top: 10%;
+    left: 10%;
+    transition: all 1s ease;
+  }
+  .imgbox5:hover .line1{
+    width: 90%;
+  }
+  .line2{
+    position: absolute;
+    width: 0%;
+    height: 3px;
+    background-color: crimson;
+    top: 90%;
+    left: 0%;
+    transition: all 1.1s ease;
+  }
+  .imgbox5:hover .line2{
+    width: 90%;
+  }
+  .line3{
+    position: absolute;
+    width: 3px;
+    height: 0%;
+    background-color: crimson;
+    top: 0%;
+    left: 10%;
+    transition: all 1.2s ease;
+  }
+  .imgbox5:hover .line3{
+    height: 90%;
+  }
+  .line4{
+    position: absolute;
+    width: 3px;
+    height: 0%;
+    background-color: crimson;
+    top: 10%;
+    left: 90%;
+    transition: all 1.3s ease;
+  }
+  .imgbox5:hover .line4{
+    height: 90%;
   }
