--- a/css/button.css
+++ b/css/button.css
@@ -44,7 +44,7 @@ body{
     position: absolute;
     top: -2px;
     left:-2px;
-    background-size: 400%;
+    background-size: 400%; 
     z-index: -1;
     filter: blur(5px);
     width: calc(100% + 4px);
@@ -92,7 +92,7 @@ body{
     text-align: center;
     padding: 5px;
     line-height: 40px;
-    border-radius: 10%;
+    border-radius: 10px;
     border: solid 2px aquamarine;
     transition: all 0.5s ease;
   }
