--- a/css/image-hover.css
+++ b/css/image-hover.css
@@ -434,7 +434,7 @@ h1{
     background-color: crimson;
     top: 10%;
     left: 10%;
-    transition: all 1s ease;
+    transition: all 1.1s ease;
   }
   .imgbox5:hover .line1{
     width: 90%;
@@ -445,7 +445,8 @@ h1{
     height: 3px;
     background-color: crimson;
     top: 90%;
-    left: 0%;
+    left: 90%;
+    transform: translateX(-100%);
     transition: all 1.1s ease;
   }
   .imgbox5:hover .line2{
@@ -456,9 +457,10 @@ h1{
     width: 3px;
     height: 0%;
     background-color: crimson;
-    top: 0%;
+    top: 90%;
     left: 10%;
-    transition: all 1.2s ease;
+    transform: translateY(-100%);
+    transition: all 1.1s ease;
   }
   .imgbox5:hover .line3{
     height: 90%;
@@ -470,7 +472,7 @@ h1{
     background-color: crimson;
     top: 10%;
     left: 90%;
-    transition: all 1.3s ease;
+    transition: all 1.1s ease;
   }
   .imgbox5:hover .line4{
     height: 90%;
