--- a/css/after-before.css
+++ b/css/after-before.css
@@ -607,8 +607,65 @@ h1 {
   transform: translate(-50%, 0);
   opacity: 1;
 }
-
-
+.box5{
+  position: relative;
+  width: 200px;
+  height: 100px;
+  background-color: #000000;
+  margin: 20px auto;
+  border-radius: 10px;
+  padding: 10px;
+}
+.box5 .button1{
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 20px;
+  background-color: #a3076f;
+  color: aliceblue;
+  cursor: pointer;
+  z-index: 0;
+}
+.button1::before{
+  content: "";
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  /* background-size: 400%; */
+  z-index: -1;
+  filter: blur(5px);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  transition: opacity 0.5s ease;
+  opacity: 0;
+}
+.button1:active{
+  color: #000000;
+}
+.button1:active:after{
+  background: transparent;
+}
+.button1:hover::before{
+  opacity: 1;
+}
+.button1::after{
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
 
 
 
