--- a/css/flex.css
+++ b/css/flex.css
@@ -130,3 +130,12 @@ h2{
 .align-content-between{
     align-content:space-between;
 }
+.self-start{
+    align-self: flex-start;
+}
+.self-center{
+    align-self: center;
+}
+.self-end{
+    align-self: flex-end;
+}
