--- a/css/flex.css
+++ b/css/flex.css
@@ -58,7 +58,7 @@ h2{
 }
 .box3{
     width: 250px;
-    
+    height: 150px;
     background-color: rgb(56, 242, 90);
     margin: 10px;
     text-align: center;
@@ -67,6 +67,19 @@ h2{
     color: aliceblue;
     font-family: 'Lilita One';
 }
+.box4{
+    width: 350px;
+    height: 150px;
+    background-color: rgb(206, 228, 3);
+    margin: 10px;
+    text-align: center;
+    line-height: 150px;
+    font-size: 50px;
+    color: aliceblue;
+    font-family: 'Lilita One';
+    flex-grow: 1;
+}
+
 .flex-wrap{
     flex-wrap: wrap;
 }
@@ -138,4 +151,28 @@ h2{
 }
 .self-end{
     align-self: flex-end;
+}
+.order1{
+    order: 1;
+}
+.order2{
+    order: 2;
+}
+.order3{
+    order: 3;
+}
+.order4{
+    order: 4;
+}
+.order-1{
+    order: -1;
+}
+.order-2{
+    order: -2;
+}
+.order0{
+    order: 0;
+}
+.order-3{
+    order: -3;
 }
