--- a/css/meadia-query.css
+++ b/css/meadia-query.css
@@ -2,3 +2,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+.container{
+    max-width: 1320px;
+    height: 500px;
+    background-color: aquamarine;
+    margin-left: auto;
+    margin-right: auto;
+}
